crates/wolf_sema/tests/snapshots/conc_diagnostics__channel_in_signature_position_is_chan.snap
---
source: crates/wolf_sema/tests/conc_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
(clean)
