crates/wolf_sema/tests/snapshots/conc_diagnostics__conc_handle_applied_scope_arity.snap
---
source: crates/wolf_sema/tests/conc_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E0401]: `Scope` does not take type arguments
 --> mem:///main.lu:1:15
  |
1 | fn fan_out(s: Scope[int]) -> int {
  |               ^^^^^^^^^^ write `Scope`
  |
  = note: a scope handle is one thing — the block's name, bound as an ordinary value (D16,
    [conc.task.scope]) — so there is nothing for an argument to say.
