crates/wolf_sema/tests/snapshots/conc_diagnostics__e1101_mut_lend_argument.snap
---
source: crates/wolf_sema/tests/conc_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E1101]: this task writes to `n`, which it captures from the enclosing function
 --> mem:///main.lu:8:33
  |
8 |         s.spawn(fn() { bump(mut n) })
  |         ----------------------------- the task's closure captures it at this spawn
  |                                 ^ tasks cannot mutate captured state
  |
  = note: task captures are copies, `imm` shares, or region moves (D14) — never mutable windows
    onto the parent's locals; two tasks writing one binding is the data race the memory
    model forbids. Three ways out: send results over a `channel` and let one owner mutate;
    guard truly shared state with a `Mutex` acquired in a `when` block; or give each task
    its own copy and combine the results after the scope joins.
