crates/wolf_sema/tests/snapshots/conc_diagnostics__e1101_two_spawns_note_once.snap
---
source: crates/wolf_sema/tests/conc_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E1101]: this task writes to `hits`, which it captures from the enclosing function
 --> mem:///main.lu:5:24
  |
5 |         s.spawn(fn() { hits += 1 })
  |         --------------------------- the task's closure captures it at this spawn
  |                        ^^^^ tasks cannot mutate captured state
  |
  = note: task captures are copies, `imm` shares, or region moves (D14) — never mutable windows
    onto the parent's locals; two tasks writing one binding is the data race the memory
    model forbids. Three ways out: send results over a `channel` and let one owner mutate;
    guard truly shared state with a `Mutex` acquired in a `when` block; or give each task
    its own copy and combine the results after the scope joins.

warning[W1101]: this write to `hits` stays inside the task
 --> mem:///main.lu:5:24
  |
5 |         s.spawn(fn() { hits += 1 })
  |                 ------------------ the closure captured it at spawn
  |                        ^^^^ lands on the task's own copy
  |
  = note: task captures copy (or move); the enclosing binding never sees this assignment. Send the
    result over a channel, or return it through the scope's join.

error[E1101]: this task writes to `says`, which it captures from the enclosing function
 --> mem:///main.lu:6:24
  |
6 |         s.spawn(fn() { says += 1 })
  |         --------------------------- the task's closure captures it at this spawn
  |                        ^^^^ tasks cannot mutate captured state
  |

warning[W1101]: this write to `says` stays inside the task
 --> mem:///main.lu:6:24
  |
6 |         s.spawn(fn() { says += 1 })
  |                 ------------------ the closure captured it at spawn
  |                        ^^^^ lands on the task's own copy
  |
