crates/wolf_sema/tests/snapshots/conc_diagnostics__e1103_nested_through_closure.snap
---
source: crates/wolf_sema/tests/conc_diagnostics.rs
expression: "render_types(&[(&[], \"main.lu\", src)])"
---
error[E1103]: `when` blocks do not nest
  --> mem:///main.lu:9:17
   |
 6 |     when (a, b) {
   |     -------------
 7 |         scope s {
 8 |             s.spawn(fn() {
 9 |                 when (c, d) { c + d }
   |                 ^^^^^^^^^^^^^^^^^^^^^ this would acquire while a set is already held
...
12 |     }
   | ----- the enclosing `when` holds its whole set here
   |
   = note: `when` acquires its entire operand set at once, in one canonical order — that is what
     makes lock-order deadlock impossible ([conc.when.nodeadlock]); a nested `when` is
     incremental acquisition by another spelling. Merge the operands into the outer set
     (`when (a, b, c) { … }`), or end the outer block before acquiring the next set.
